# my-Information-aggregation-platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  main.py  prd.json  progress.txt  pyproject.toml
2026-03-20/: index.html
2026-03-21/: index.html
2026-03-24/: index.html
2026-03-25/: index.html
2026-03-26/: index.html
2026-03-27/: index.html
2026-03-28/: index.html
2026-03-29/: index.html
2026-03-30/: index.html
2026-03-31/: index.html
2026-04-01/: index.html
2026-04-02/: index.html
2026-04-03/: index.html
2026-04-04/: index.html
2026-04-05/: index.html
2026-04-06/: index.html
2026-04-07/: index.html
2026-04-09/: index.html
2026-04-10/: index.html
2026-04-11/: index.html
2026-04-12/: index.html
2026-04-13/: index.html
2026-04-14/: index.html
2026-04-15/: index.html
2026-04-16/: index.html
2026-04-17/: index.html
2026-04-18/: index.html
2026-04-20/: index.html
2026-04-21/: index.html
2026-04-22/: index.html
2026-04-23/: index.html
2026-04-24/: index.html
2026-04-25/: index.html
2026-04-26/: index.html
2026-04-27/: index.html
2026-04-28/: index.html
2026-04-29/: index.html
2026-04-30/: index.html
2026-05-01/: index.html
2026-05-02/: index.html
2026-05-03/: index.html
2026-05-04/: index.html
2026-05-05/: index.html
analyzer/: AGENTS.md  __init__.py  ai_client.py  prompt_builder.py  summarizer.py
collector/: AGENTS.md  __init__.py  base.py  github_trending.py  rss.py
config/: AGENTS.md  loader.py  prompts.yaml  schedule.yaml  settings.yaml.example  sources.yaml  tags.yaml
(+27 files in other folders)
